--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pixabay image search</title>
+    <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
-      rel="stylesheet"
-    />
+    <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/preloader.html"></include>
-    <include src="./partials/search.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/buttons.html"></include>
+    <div class="container">
+      <form class="search-form" id="search-form">
+        <input
+          class="input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="search-form__submit" type="submit">
+          <img
+            src="./images/icon.png"
+            width="25"
+            height="25"
+            alt="icon-search"
+          />
+        </button>
+      </form>
 
+      <div class="gallery">
+        <!-- Картки зображень -->
+      </div>
+
+      <button type="button" class="load-more">Load more</button>
+    </div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
